# A-Normal-Chess-Game

./: .gitignore  AI_PERFORMANCE_ANALYSIS.md  BRAINSTORMING_RAPPORT.md  CMakeLists.txt  PLAN_DEVELOPPEMENT.md  PLAN_EN.md  PLAN_IA_IMPLEMENTATION.md  PLAN_MULTIPLAYER_LAN.md  PLAN_REFACTORING_CODEBASE.md  QUESTIONS_IMPLEMENTATION.md  RAPPORT_ANALYSE_JEU.md  RAPPORT_PROCESSUS_ALEATOIRES.md  REPONSES_IMPLEMENTATION.md  aléatoire.md  choix techniques internet.md  fixe indicators.md  ui fixes.md  à envisager.txt
assets/config/: ai_params.json  game_params.json  master_config.json
debug_game_state/: Game_1775526705_turn_history_1775526728.json  fefef_turn_history_1776292992.json
generator/icons_generator/: Black Kingdom Shield Icon.html  Colored Crossed Swords Icon.html  Greyscale Hammer Icon.html  Greyscale Hand Icon.html  White Kingdom Shield Icon.html  icon-generator-core.js  icon-generator.css
generator/structures_generator/: Barracks Pixel Art.html  Farm Pixel Art.html  prompt.md  structure-generator.css
mécanisme aléatoires/: RAPPORT_PROCESSUS_ALEATOIRES.md  brouillard_meteo.md  coffre_loot_progressif.md  pieces_infernales.md  variation_herbe_beta.md  xp_variable.md
saves/: Ilanus.json  fefef.json  hh.json  recas.json
src/AI/: AIBrain.cpp  AIBrain.hpp  AIBuildModule.cpp  AIBuildModule.hpp  AIController.cpp  AIController.hpp  AIDirector.cpp  AIDirector.hpp  AIEconomyModule.cpp  AIEconomyModule.hpp  AIEvaluator.cpp  AIEvaluator.hpp  AIMCTS.cpp  AIMCTS.hpp  AISpecialModule.cpp  AISpecialModule.hpp  AIStrategy.cpp  AIStrategy.hpp  AIStrategyBuild.cpp  AIStrategyBuild.hpp  AIStrategyEcon.cpp  AIStrategyEcon.hpp  AIStrategyMove.cpp  AIStrategyMove.hpp  AIStrategySpecial.cpp  AIStrategySpecial.hpp  AITacticalEngine.cpp  AITacticalEngine.hpp  AITurnContext.cpp  AITurnContext.hpp  CheckmateSolver.cpp  CheckmateSolver.hpp  ForwardModel.cpp  ForwardModel.hpp  GameSnapshot.hpp  ThreatMap.hpp  TimeBudget.hpp
src/Assets/: AssetManager.cpp  AssetManager.hpp
src/Autonomous/: AutonomousUnit.hpp
src/Board/: Board.cpp  BoardGenerator.cpp  BoardGenerator.hpp  Cell.hpp
src/Buildings/: Building.cpp  Building.hpp  BuildingFactory.cpp  BuildingFactory.hpp  StructureChunkRegistry.cpp
src/Config/: AIConfig.cpp  AIConfig.hpp  GameConfig.cpp  GameConfig.hpp
src/Core/: AITurnRunner.cpp  AITurnRunner.hpp  Game.cpp  Game.hpp  GameEngine.cpp  GameEngine.hpp  GameSessionConfig.hpp  GameStateValidator.cpp  GameStateValidator.hpp  GameplayNotification.hpp  InteractionPermissions.cpp  InteractionPermissions.hpp  LocalPlayerContext.hpp  MacOSTrackpadAdapter.hpp  MacOSTrackpadAdapter.mm  TurnDraft.cpp  TurnDraft.hpp
src/Input/: InputContext.hpp  InputHandler.cpp  InputHandler.hpp  InputSelectionBookmark.hpp  LayeredSelection.cpp  LayeredSelection.hpp  PendingBuildSelection.hpp  ToolState.hpp
src/Kingdom/: Kingdom.cpp  Kingdom.hpp  KingdomId.hpp
src/Multiplayer/: MultiplayerClient.cpp  MultiplayerClient.hpp  MultiplayerRuntime.cpp  MultiplayerRuntime.hpp  MultiplayerServer.cpp  MultiplayerServer.hpp  Protocol.cpp  Protocol.hpp
src/Projection/: ForwardModel.cpp  GameSnapshot.hpp
src/Render/: Camera.cpp  Camera.hpp  OverlayRenderer.cpp  OverlayRenderer.hpp  Renderer.cpp  Renderer.hpp  StructureOverlay.cpp  StructureOverlay.hpp
src/Runtime/: AITurnCoordinator.cpp  AITurnCoordinator.hpp  FrontendCoordinator.cpp  FrontendCoordinator.hpp  HotseatFrontendState.hpp  InGamePresentationCoordinator.cpp  InGamePresentationCoordinator.hpp  InputCoordinator.cpp  InputCoordinator.hpp  MultiplayerEventCoordinator.cpp  MultiplayerEventCoordinator.hpp  MultiplayerRuntimeCoordinator.cpp  MultiplayerRuntimeCoordinator.hpp  PendingTurnValidationCache.hpp  RenderCoordinator.cpp  RenderCoordinator.hpp  SelectionQueryCoordinator.cpp  SelectionQueryCoordinator.hpp  SessionFlow.cpp  SessionFormRequest.hpp  SessionMetadataService.cpp  SessionMetadataService.hpp  SessionPresentationCoordinator.cpp  SessionPresentationCoordinator.hpp  SessionRuntimeCoordinator.cpp  SessionRuntimeCoordinator.hpp  TurnCoordinator.cpp  TurnCoordinator.hpp  TurnDraftCoordinator.cpp  TurnDraftCoordinator.hpp  TurnLifecycleCoordinator.cpp  TurnLifecycleCoordinator.hpp  UICallbackBinder.cpp  UICallbackBinder.hpp  UICallbackCoordinator.cpp  UpdateCoordinator.cpp  UpdateCoordinator.hpp  WeatherVisibility.cpp  WeatherVisibility.hpp
src/Save/: SaveData.hpp  SaveManager.cpp  SaveManager.hpp
src/Systems/: BuildOverlayRules.hpp  BuildSystem.cpp  BuildSystem.hpp  CheckResponseRules.cpp  CheckResponseRules.hpp  CheckSystem.cpp  CheckSystem.hpp  CombatSystem.cpp  CombatSystem.hpp  EconomySystem.cpp  EconomySystem.hpp  EventLog.cpp  EventLog.hpp  InfernalSystem.cpp  InfernalSystem.hpp  MarriageSystem.cpp  MarriageSystem.hpp  PendingTurnProjection.cpp  PendingTurnProjection.hpp  ProductionSpawnRules.cpp  ProductionSpawnRules.hpp  ProductionSystem.cpp  ProductionSystem.hpp  SelectionMoveRules.cpp  SelectionMoveRules.hpp  StructureIntegrityRules.cpp  StructureIntegrityRules.hpp  TurnCommand.hpp  TurnPointRules.cpp  TurnPointRules.hpp  TurnSystem.cpp  TurnSystem.hpp  TurnValidationContext.hpp  WeatherSystem.cpp  XPSystem.cpp  XPSystem.hpp
src/UI/: ActionButtonStyle.hpp  AutonomousUnitPanel.cpp  AutonomousUnitPanel.hpp  BarracksPanel.cpp  BarracksPanel.hpp  BuildToolPanel.cpp  BuildToolPanel.hpp  BuildingPanel.cpp  BuildingPanel.hpp  CellPanel.cpp  CellPanel.hpp  EventLogPanel.cpp  EventLogPanel.hpp  GameMenuUI.cpp  HUD.cpp  HUD.hpp  HUDLayout.hpp  InGameViewModel.hpp  InGameViewModelBuilder.cpp  InGameViewModelBuilder.hpp  KingdomBalancePanel.cpp  KingdomBalancePanel.hpp  MainMenuUI.cpp  MainMenuUI.hpp  MapObjectPanel.cpp  PauseMenuUI.cpp  PauseMenuUI.hpp  PendingConstructionPanel.cpp  PendingConstructionPanel.hpp  PiecePanel.cpp  PiecePanel.hpp  ToolBar.cpp  ToolBar.hpp  UIManager.cpp  UIManager.hpp
src/Units/: MovementRules.cpp  MovementRules.hpp  PieceFactory.cpp  PieceFactory.hpp
structures_generator/: Arena Pixel Art.html  Church Pixel Art.html  Mine Pixel Art.html  structure-generator-core.js
tests/: TestMain.cpp
